src/index.css
@import "tailwindcss";

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Space Grotesk', sans-serif;
}

@keyframes float {

    0%,
    100% {
        transform: translateY(0px) rotate(0deg);
    }

    33% {
        transform: translateY(-15px) rotate(3deg);
    }

    66% {
        transform: translateY(8px) rotate(-3deg);
    }
}

.floating-icon {
    animation: float linear infinite;
}

@keyframes scrollRight {
    0% {
        transform: translateX(0);
    }

    100% {
        transform: translateX(-33.33%);
    }
}

@keyframes scrollLeft {
    0% {
        transform: translateX(-33.33%);
    }

    100% {
        transform: translateX(0);
    }
}

